# prior_auth

./: .env.example  .gitignore  pyproject.toml
data/policy_corpus/: knee_arthroscopy_meniscectomy_Aetna_CPB0673.txt  lumbar_mri_NIA_CG_044.txt  mri_general_NCD_220_2_UHC.txt
data/synthetic_requests/: case_001_clean.txt  case_002_followup.txt  case_002_missing_dx_code.txt  case_003_sparse.txt
scripts/: build_index.py  resume_case.py  run_graph.py  run_node.py  run_retrieve_policy.py  test_critique_prompt.py  test_judge_prompt.py  test_propose_prompt.py
src/prior_auth/: checkpointing.py  config.py  graph.py  llm.py  state.py
src/prior_auth/nodes/: critique.py  extract.py  judge.py  propose.py  retrieve_policy.py
src/prior_auth/prompts/: critique.py  extract.py  judge.py  propose.py
src/prior_auth/schemas/: decision.py  extraction.py  policy.py
tests/: test_checkpointing.py  test_critique.py  test_extract.py  test_judge.py  test_propose.py  test_retrieve_policy.py
