[project]
name = "prior-auth"
version = "0.1.0"
description = "Agentic prior authorization review system (portfolio project)"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langchain-anthropic",
    "pydantic",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
