[project]
name = "prior-auth"
version = "0.1.0"
description = "Agentic prior authorization review system (portfolio project)"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langchain-anthropic",
    "langchain-community",
    "langchain-text-splitters",
    "langchain-huggingface",
    "langchain-chroma",
    "sentence-transformers",
    "chromadb",
    "pydantic",
    "python-dotenv",
    "langgraph-checkpoint-sqlite",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
